--- a/OwenPortfolio.html
+++ b/OwenPortfolio.html
@@ -19,7 +19,7 @@
 		<a class="active" href="javascript:void(0)">Home</a>
 		<a href="javascript:void(0)">About Me</a>
 		<a href="javascript:void(0)">Projects</a>
-		<a href="">Usability and Accessibility</a>
+		<a href="javascript:void(0)">Usability and Accessibility</a>
 	</div>
 
 	<div class="row">
