--- a/OwenPortfolio.html
+++ b/OwenPortfolio.html
@@ -26,7 +26,7 @@
 
 		<div class="side">
 			<h2>About Me</h2>
-			<img src="sailing.jpg"alt="Photo of me on a sailboat"style="width:100px; height:100px;"border="1">
+			<img src="sailing.JPG"alt="Photo of me on a sailboat"style="width:100px; height:100px;"border="1">
 			<p>I have spent all of my life living around the water or spending my time on/in it, and I wouldn't ask for it to be any other way.</p>
 		</div>
 
