--- a/OwenPortfolio.html
+++ b/OwenPortfolio.html
@@ -19,18 +19,18 @@
 		<a class="active" href="javascript:void(0)">Home</a>
 		<a href="javascript:void(0)">About Me</a>
 		<a href="javascript:void(0)">Projects</a>
-		<a href="javascript:void(0)">Usability and Accessibility</a>
+		<a href="">Usability and Accessibility</a>
 	</div>
 
 	<div class="row">
 
 		<div class="side">
 			<h2>About Me</h2>
-			<img src="sailing.JPG"alt="Photo of me on a sailboat"style="width:100px; height:100px;"border="1">
+			<img src="sailing.jpg"alt="Photo of me on a sailboat"style="width:100px; height:100px;"border="1">
 			<p>I have spent all of my life living around the water or spending my time on/in it, and I wouldn't ask for it to be any other way.</p>
 		</div>
 
-		<div class="main">
+		<div class="content">
 			<h3>Scroll down to view my portfolio</h3>
 			<p>This is going to contain filler text.</p>
   			<p>Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
@@ -40,9 +40,7 @@
   			<p>Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
 		</div>
 
-		<div class="footer">
-			<a href="">Back to top of page</a>
-		</div>
+
 	</div>
 	
 
