--- a/Usability.html
+++ b/Usability.html
@@ -17,9 +17,11 @@
 
 	<div id="navbar">
 		<a href="OwenPortfolio.html">Home</a>
-		<a href="javascript:void(0)">About Me</a>
 		<a href="javascript:void(0)">Projects</a>
 		<a class="active" href="Usability.html">Usability and Accessibility</a>
+		<a href="https://www.linkedin.com/in/owenpdoyle/" target=_blank>Linkedin</a>
+		<a href="FieldReport.pdf" target=_blank> Fields Report</a>
+		<a href="WorkExperience.html">Work Experience</a>
 	</div>
 
 	<div class="row">
