--- a/newPortfolio.html
+++ b/newPortfolio.html
@@ -4,41 +4,34 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="newCSS.css">
+<link rel="stylesheet" type="text/css" href="newCSS.css"> </link>
 <title>Owen's Portfolio</title>
 
 </head>
 <body>
 
 	<div class="header">
-		<h2>Welcome to Owen Doyle's Portfolio</h2>
-		<p>Software Engineering student attending Florida Gulf Coast University</p>
+		<h2>Welcome Owen Doyle's Portfolio</h2>
+		<p>This is a work in process, I am currently taking the web developement course in Codecademy so that I will have the skills and knowledge to design this website how I want it to look. So I do want to clarify that the website doesn't look good because I am not interested in it.</p>
 	</div>
 
 	<div id="navbar">
 		<a class="active" href="javascript:void(0)">Home</a>
+		<a href="javascript:void(0)">About Me</a>
 		<a href="javascript:void(0)">Projects</a>
-		<a href="Usability.html">Usability and Accessibility</a>
-		<a href="https://www.linkedin.com/in/owenpdoyle/" target=_blank>Linkedin</a>
-		<a href="FieldReport.pdf" target=_blank> Fields Report</a>
-		<a href="WorkExperience.html">Work Experience</a>
 	</div>
 
 	<div class="row">
 
 		<div class="side">
 			<h2>About Me</h2>
-			<img src="sailing.jpg" alt="Photo of me on a sailboat" style="width:400px; height:400px;" border=1>
+			<img src="sailing.jpg"alt="Photo of me on a sailboat"style="width:100px; height:100px;"border="1">
 			<p>I have spent all of my life living around the water or spending my time on/in it, and I wouldn't ask for it to be any other way.</p>
-			<img src="fraternity.jpg" alt="In a group photo of my fraternity chapter with our flag in the background" style="width:400px; height:400px;" border=1>
-			<p>I am an active member in the Florida Xi chapter of Phi Delta Theta. Being in a fraternity has brought me on a path to becoming the best version of myself, and taught me valuable lessons along the way.</p>
 		</div>
 
 		<div class="content">
-			<h3>Who am I?</h3>
-			<p>Born in Florida, I've been fortunate enough to experience great weather year-round. I have raced sailboats, snowboarded down mountains, and volunteered for various organizations while in the Boy Scouts of America; however, reading and learning new skill sets such as coding are a daily passion of mine.</p>
-			<hr>
-			<h3>Work in progress...</h3>
+			<h3>Scroll down to view my portfolio</h3>
+			<p>This is going to contain filler text.</p>
   			<p>Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
   			<p>Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
   			<p>Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
@@ -48,8 +41,8 @@
 
 
 	</div>
-	
-<!-- for the sticky top menu -->
+
+
 <script>
 window.onscroll = function() {myFunction()};
 
