--- a/OwenPortfolio.html
+++ b/OwenPortfolio.html
@@ -4,7 +4,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="newCSS.css">
+<link rel="stylesheet" type="text/css" href="
+        fictional-robot/CSS Portfolio Owen Doyle.css">
 <title>Owen's Portfolio</title>
 
 </head>
