--- a/OwenPortfolio.html
+++ b/OwenPortfolio.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="fictional-robot/CSS Portfolio Owen Doyle.css">
+<link rel="stylesheet" type="text/css" href="newCSS.css">
 <title>Owen's Portfolio</title>
 
 </head>
@@ -28,9 +28,9 @@
 
 		<div class="side">
 			<h2>About Me</h2>
-			<img src="fictional-robot/sailboat.JPG" alt="Photo of me on a sailboat" style="width:400px; height:400px;">
+			<img src="sailing.jpg" alt="Photo of me on a sailboat" style="width:400px; height:400px;" border=1>
 			<p>I have spent all of my life living around the water or spending my time on/in it, and I wouldn't ask for it to be any other way.</p>
-			<img src="fictional-robot/fraternity.JPG" alt="In a group photo of my fraternity chapter with our flag in the background" style="width:400px; height:400px;">
+			<img src="fraternity.jpg" alt="In a group photo of my fraternity chapter with our flag in the background" style="width:400px; height:400px;" border=1>
 			<p>I am an active member in the Florida Xi chapter of Phi Delta Theta. Being in a fraternity has brought me on a path to becoming the best version of myself, and taught me valuable lessons along the way.</p>
 		</div>
 
