--- a/OwenPortfolio.html
+++ b/OwenPortfolio.html
@@ -29,7 +29,7 @@
 		<div class="side">
 			<h2>About Me</h2>
 			<a href="fictional-robot/sailing.JPG">
-			  <img src="sailing.JPG" alt="Photo of me on a sailboat" style="width:400px; height:400px;">
+			  <img src="sailing.jpg" alt="Photo of me on a sailboat" style="width:400px; height:400px;">
 			</a>
 			<p>I have spent all of my life living around the water or spending my time on/in it, and I wouldn't ask for it to be any other way.</p>
 			<img src="fraternity.jpg" alt="In a group photo of my fraternity chapter with our flag in the background" style="width:400px; height:400px;">
