--- a/OwenPortfolio.html
+++ b/OwenPortfolio.html
@@ -32,7 +32,9 @@
 			  <img src="sailing.jpg" alt="Photo of me on a sailboat" style="width:400px; height:400px;">
 			</a>
 			<p>I have spent all of my life living around the water or spending my time on/in it, and I wouldn't ask for it to be any other way.</p>
+			<a href="fictional-robot/fraternity.jpg">
 			<img src="fraternity.jpg" alt="In a group photo of my fraternity chapter with our flag in the background" style="width:400px; height:400px;">
+			</a>
 			<p>I am an active member in the Florida Xi chapter of Phi Delta Theta. Being in a fraternity has brought me on a path to becoming the best version of myself, and taught me valuable lessons along the way.</p>
 		</div>
 
