--- a/OwenPortfolio.html
+++ b/OwenPortfolio.html
@@ -28,11 +28,11 @@
 
 		<div class="side">
 			<h2>About Me</h2>
-			<a href="fictional-robot/sailing.JPG">
+			<a href="https://lion6786.github.io/fictional-robot/sailing.JPG">
 			  <img src="sailing.jpg" alt="Photo of me on a sailboat" style="width:400px; height:400px;">
 			</a>
 			<p>I have spent all of my life living around the water or spending my time on/in it, and I wouldn't ask for it to be any other way.</p>
-			<a href="fictional-robot/fraternity.jpg">
+			<a href="https://lion6786.github.io/fictional-robot/fraternity.jpg">
 			<img src="fraternity.jpg" alt="In a group photo of my fraternity chapter with our flag in the background" style="width:400px; height:400px;">
 			</a>
 			<p>I am an active member in the Florida Xi chapter of Phi Delta Theta. Being in a fraternity has brought me on a path to becoming the best version of myself, and taught me valuable lessons along the way.</p>
