--- a/OwenPortfolio.html
+++ b/OwenPortfolio.html
@@ -28,7 +28,7 @@
 
 		<div class="side">
 			<h2>About Me</h2>
-			<img src="https://github.com/lion6786/fictional-robot" alt="Photo of me on a sailboat" style="width:400px;height:400px;">
+			<img src="https://github.com/lion6786/fictional-robot/sailing.jpg" alt="Photo of me on a sailboat" style="width:400px;height:400px;">
 			<p>I have spent all of my life living around the water or spending my time on/in it, and I wouldn't ask for it to be any other way.</p>
 			<img src="/fictional-robot/fraternity.jpg" alt="In a group photo of my fraternity chapter with our flag in the background" style="width:400px; height:400px;">
 			<p>I am an active member in the Florida Xi chapter of Phi Delta Theta. Being in a fraternity has brought me on a path to becoming the best version of myself, and taught me valuable lessons along the way.</p>
