--- a/Usability.html
+++ b/Usability.html
@@ -27,6 +27,7 @@
 	<div class="row">
 
 		<div class="side">
+			<h2>About Me</h2>
 			<img src="https://github.com/lion6786/fictional-robot/blob/master/sailing.jpg?raw=true" alt="Photo of me on a sailboat" style="width:400px;height:400px;">
 			<p>I have spent all of my life living around the water or spending my time on/in it, and I wouldn't ask for it to be any other way.</p>
 			<img src="https://github.com/lion6786/fictional-robot/blob/master/fraternity.JPG?raw=true" alt="In a group photo of my fraternity chapter with our flag in the background" style="width:400px; height:400px;">
