--- a/Usability.html
+++ b/Usability.html
@@ -12,7 +12,7 @@
 
 	<div class="header">
 		<h2>Welcome Owen Doyle's Portfolio</h2>
-		<p>This is a work in process, I am currently taking the web developement course in Codecademy so that I will have the skills and knowledge to design this website how I want it to look. So I do want to clarify that the website doesn't look good because I am not interested in it.</p>
+		<p>Software Engineering student attending Florida Gulf Coast University</p>
 	</div>
 
 	<div id="navbar">
