--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -27,7 +27,7 @@
 					<p></p>
 				</div>
 				<div class="middle">
-					<h1>COMING SOON</h1>
+					<h1>COMING DECEMBER 30, 2018</h1>
 					<hr>
 					<p id="demo" style="font-size:30px"></p>
 				</div>
