--- a/Usability.html
+++ b/Usability.html
@@ -30,7 +30,7 @@
 			<h2>About Me</h2>
 			<img src="https://github.com/lion6786/fictional-robot/blob/master/sailing.jpg?raw=true" alt="Photo of me on a sailboat" style="width:400px;height:400px;">
 			<p>I have spent all of my life living around the water or spending my time on/in it, and I wouldn't ask for it to be any other way.</p>
-			<img src="https://github.com/lion6786/fictional-robot/blob/master/fraternity.JPG?raw=true" alt="In a group photo of my fraternity chapter with our flag in the background" style="width:400px; height:400px;">
+			<img src="https://github.com/lion6786/fictional-robot/blob/master/fraternity.jpg?raw=true" alt="In a group photo of my fraternity chapter with our flag in the background" style="width:400px; height:400px;">
 			<p>I am an active member in the Florida Xi chapter of Phi Delta Theta. Being in a fraternity has brought me on a path to becoming the best version of myself, and taught me valuable lessons along the way.</p>
 		</div>
 		
