--- a/OwenPortfolio.html
+++ b/OwenPortfolio.html
@@ -6,18 +6,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="newCSS.css">
 <title>Owen's Portfolio</title>
-
+<!-- Made by Owen Doyle -->
 </head>
 <body>
 
 	<div class="header">
 		<h2>Welcome to Owen Doyle's Portfolio</h2>
 		<p>Software Engineering student attending Florida Gulf Coast University</p>
+		<a href="http://www.w3.org/html/logo/">
+		<img src="https://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
+		</a>
 	</div>
 
 	<div id="navbar">
 		<a class="active" href="javascript:void(0)">Home</a>
-		<a href="javascript:void(0)">Projects</a>
+		<a href="projects.html">Projects</a>
 		<a href="Usability.html">Usability and Accessibility</a>
 		<a href="https://www.linkedin.com/in/owenpdoyle/" target=_blank>Linkedin</a>
 		<a href="FieldReport.pdf" target=_blank> Fields Report</a>
@@ -52,10 +55,8 @@
 <!-- for the sticky top menu -->
 <script>
 window.onscroll = function() {myFunction()};
-
 var navbar = document.getElementById("navbar");
 var sticky = navbar.offsetTop;
-
 function myFunction() {
   if (window.pageYOffset >= sticky) {
     navbar.classList.add("sticky")
