--- a/Usability.html
+++ b/Usability.html
@@ -6,18 +6,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="newCSS.css">
 <title>Website Accessibility & Usability</title>
-
+<!-- Made by Owen Doyle -->
 </head>
 <body>
 
 	<div class="header">
 		<h2>Welcome Owen Doyle's Portfolio</h2>
 		<p>Software Engineering student attending Florida Gulf Coast University</p>
+		<a href="http://www.w3.org/html/logo/">
+		<img src="https://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
+		</a>
 	</div>
 
 	<div id="navbar">
 		<a href="OwenPortfolio.html">Home</a>
-		<a href="javascript:void(0)">Projects</a>
+		<a href="projects.html">Projects</a>
 		<a class="active" href="Usability.html">Usability and Accessibility</a>
 		<a href="https://www.linkedin.com/in/owenpdoyle/" target=_blank>Linkedin</a>
 		<a href="FieldReport.pdf" target=_blank> Fields Report</a>
@@ -33,7 +36,7 @@
 			<img src="https://github.com/lion6786/fictional-robot/blob/master/fraternity.jpg?raw=true" alt="In a group photo of my fraternity chapter with our flag in the background" style="width:275px; height:400px;">
 			<p>I am an active member in the Florida Xi chapter of Phi Delta Theta. Being in a fraternity has brought me on a path to becoming the best version of myself, and taught me valuable lessons along the way.</p>
 		</div>
-		
+
 		<div class="content">
 			<h3>Website Accessibility & Usability</h3>
 			<h4>What I ensured was widely accessible and usable.</h4>
@@ -45,6 +48,7 @@
 					<li>Screen size</li>
 					<li>Document structure</li>
 				</ul>
+			</div>
 			<div>
 				<h4>Images</h4>
 			</div>
@@ -69,7 +73,6 @@
 			</div>
 		</div>
 	</div>
-</div>
 
 
 <script>
