--- a/WorkExperience.html
+++ b/WorkExperience.html
@@ -6,17 +6,20 @@
 <link rel="stylesheet" type="text/css" href="newCSS.css">
 <link rel="stylesheet" type="text/css" href="ComingSoon.css">
 <title>Coming Soon...</title>
-
+<!-- Made by Owen Doyle -->
 </head>
 <body>
 	<div class="header">
 		<h2>Welcome to Owen Doyle's Portfolio</h2>
 		<p>Software Engineering student attending Florida Gulf Coast University</p>
+		<a href="http://www.w3.org/html/logo/">
+		<img src="https://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
+		</a>
 	</div>
 
 	<div id="navbar">
 		<a href="OwenPortfolio.html">Home</a>
-		<a href="javascript:void(0)">Projects</a>
+		<a href="Projects.html">Projects</a>
 		<a href="Usability.html">Usability and Accessibility</a>
 		<a href="https://www.linkedin.com/in/owenpdoyle/" target=_blank>Linkedin</a>
 		<a href="FieldReport.pdf" target=_blank> Fields Report</a>
@@ -37,43 +40,31 @@
 			</div>
 	
 <script>
-
 // Set the date that's being counted down to
 var countDownDate = new Date("Dec 30, 2018").getTime();
-
 // Update the count down every 1 second
 var x = setInterval(function() {
-
 	// Get todays date and time
 	var now = new Date().getTime();
-
 	// Find the distance between now and the count down date
 	var distance = countDownDate - now;
-
 	//Time calculations for days, hours, minutes, and seconds
 	var days = Math.floor(distance / (1000 * 60 * 60 * 24));
 	var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
 	var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
 	var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
 	// Display the result in an element with id="demo"
 	document.getElementById("demo").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
-
 	// If the countdown is finished, write some text
 	if (distance < 0) {
 		clearInterval(x);
 		document.getElementById("demo").innerHTML = "EXPIRED";
 	}
 }, 1000);
-
-
-
 // for the sticky top menu 
 window.onscroll = function() {myFunction()};
-
 var navbar = document.getElementById("navbar");
 var sticky = navbar.offsetTop;
-
 function myFunction() {
   if (window.pageYOffset >= sticky) {
     navbar.classList.add("sticky")
