--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
 	</div>
 
 	<div id="navbar">
-		<a href="owenportfolio.html">Home</a>
+		<a href="OwenPortfolio.html">Home</a>
 		<a class='active' href="projects.html">Projects</a>
 		<a href="Usability.html">Usability and Accessibility</a>
 		<a href="https://www.linkedin.com/in/owenpdoyle/" target=_blank>Linkedin</a>
